packages/parser-javascript/test/corpus/comment_after_colon.txt
================
Comment after colon with no value
================
topic foo:
    label: # a comment
    description: "hello"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          (comment))
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
================
Comment after colon with value on same line
================
topic foo:
    label: "hello" # inline comment
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content)))))
          (comment))))))
================
Comment after colon before arrow
================
topic foo:
    instructions: # a comment
        ->
            say "hello"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          (comment)
          (ERROR
            (id)
            (string)))))))
