packages/parser-javascript/test/corpus/comment_indentation.txt
================
Comment at lower indent between block fields keeps block intact
================
start_agent topic_selector:
   label: "Topic Selector"

#foo
   description: "hello"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))
        (comment)
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
================
Comment at column zero between nested fields keeps block intact
================
config:
    developer_name: "foo"

# a comment
    agent_label: "bar"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))
        (comment)
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
================
Comment at lower indent where block actually ends
================
topic foo:
   label: "hello"

# this ends the block
next_block:
   value: "world"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))
    (comment)
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
