packages/parser-javascript/test/corpus/dogfood_patterns.txt
================
Dedented template continuation in block scalar
================
actions:
    get_forecast:
        description: |
            Get weather forecast for a location.

          Args:
          latitude: Latitude of the location
        label: "get_forecast"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (template
                (template_content)))
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))))))))

================
Column-zero comments between procedure and sibling block
================
topic Apex_class_executor:
    label: "Apex class executor"
    reasoning:
        instructions: ->
            | The result is ready.

#        actions:
#            call_action: @actions.call_action
#                with input=""

    actions:
        call_action:
            description: "Invoke action"
            target: "apex://Action"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content))))))
        (comment)
        (comment)
        (comment)
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (mapping
                (mapping_element
                  key: (key
                    (id))
                  colinear_value: (expression_with_to
                    expression: (expression
                      (atom
                        (string
                          (string_content))))))
                (mapping_element
                  key: (key
                    (id))
                  colinear_value: (expression_with_to
                    expression: (expression
                      (atom
                        (string
                          (string_content))))))))))))))

================
Template with curly brace interpolation
================
topic welcome_user:
    label: "Welcome User"
    reasoning:
        instructions: ->
            | Hi{!@variables.user_name and (" " + @variables.user_name) or ""}! Nice to chat.
            transition to @topic.small_talk
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content)
                  (template_expression
                    expression: (expression
                      (binary_expression
                        (expression
                          (binary_expression
                            (expression
                              (member_expression
                                (expression
                                  (atom
                                    (at_id
                                      (id))))
                                (id)))
                            (expression
                              (parenthesized_expression
                                expression: (expression
                                  (binary_expression
                                    (expression
                                      (atom
                                        (string
                                          (string_content))))
                                    (expression
                                      (member_expression
                                        (expression
                                          (atom
                                            (at_id
                                              (id))))
                                        (id)))))))))
                        (expression
                          (atom
                            (string))))))
                  (template_content))
                (transition_statement
                  with_to_statement_list: (with_to_statement_list
                    (to_statement
                      target: (expression
                        (member_expression
                          (expression
                            (atom
                              (at_id
                                (id))))
                          (id))))))))))))))

================
Block scalar with JSON content
================
    actions:
        McpTool_sfmc:
            description: |
                  Retrieve a list of data extensions. GET /data/v1/customobjects.

                IMPORTANT: The $search query parameter is REQUIRED and must be a valid search term (no wildcards like * or %).
                You must provide query_json with the structure: {"$search": "term"}

                Examples:
                - Search for 'customer': {"$search": "customer"}
                - Search for 'email': {"$search": "email"}

                See resource 'sfmc://docs/data/v1/customobjects' for full API documentation.
            label: "sfmc_get_data_extensions"
            source: "McpTool_sfmc"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (template
                (template_content)))
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))))))))
